next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Git log comments.

Current Version (git master, 6.1-dev, future 6.2): 
-------------------------------------------------

- Swig mapscript for multi-label support (#4310)

- Fix creation of a vector symbolObj in mapscript (#4318)

- Added coverage metadata in WCS (#4306)

- Ignore unknown requets parameteres in WCS 2.0 (#4307).

- Fixed getFeature request with custom output format fails on filter encoding (#4190)

- Fixed resolution when UoM changes in WCS 2.0 (#4283)

- Added missing DEFRESOLUTION parameter to msCopyMap() function (#4272) 

- Migrated svn to git, and issue tracking from trac to github

- Fixed mapscript is unusable in a web application due to memory leaks (#4262)
 
- Fixed legend image problem with annotation layers with label offsets (#4147)

- Add support for mutiple labels per feature (RFC81)

- Add support for INSPIRE view service (RFC 75)

- Drop support for GDAL/OGR older than 1.5.0 (#4224)

- PDF backend: add support for generating geospatial PDF, when
  GDAL 2.0 with PDF driver is used, and the GEO_ENCODING FORMATOPTION
  (set to ISO32000 or OGC_BP) is added to the OUTPUTFORMAT definition. (#4216)

- Python mapscript: fix swig mappings to work with both python 2.5.and 2.6 (#3940)

- Added classgroup CGI parameter support (#4207)

- Java mapscript: renamed shared library and completed libtool support (#2595)

- Fixed WCS 2.0 axis order (#4191)

- Added MS_CJC_* constants in PHP/MapScript (#4183)

- Fixed Memory Leak with Fribidi Strings (#4188)

- Allow multiple label definitions within a class (RFC 77/#4127)

- shp2img: make it possible to specify layers (with -l option) that match GROUP names.

- reuse a pre-parsed mapfile across fastcgi loops in case the mapfile is
  specified with the MS_MAPFILE env variable. (#4018)
